--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,12 @@
     margin: 0 auto;
     position: relative;
 }
+.containerl {
+    max-width: 1100px;
+    margin: 0 auto;
+    position: relative;
+}
+
 
 .list {
     display: flex;
@@ -297,6 +303,10 @@ padding-left: 40px;
     align-items: center;    
     height: 225px;
 }
+.section_wrapper{
+    display: flex;
+    justify-content: space-between;
+}
 .Photography-title{
     display: flex;
     font-family: Poppins;
@@ -317,11 +327,117 @@ height: 120px;
     background: url("../img/sec_two.png")no-repeat;
     height: 769px;
     width: 534px;
+    display: flex;
+    align-items: end;
 }   
 .sec_two-img{
     position: absolute;
 }
 .two_text_wrapper{  
-    height: 100px;
+    background: #ffff;
+    width: 427px;
+    height: 291px;
     z-index: 999;
+    margin-bottom: 40px;
+}
+.two_title{
+    font-family: Poppins;
+font-size: 30px;
+font-weight: 400;
+line-height: 38px;
+text-align: left;
+ color: #252061;
+}
+.two_text{
+    margin-top: 10px;
+    font-family: Poppins;
+font-size: 14px;
+font-weight: 400;
+line-height: 23px;
+text-align: left;
+color: #969696;
+}
+.two_img{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin-top: 10px;
+}
+.two_text_{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.two_ava{
+    display: flex;
+    justify-content: start;
+    padding-right: 10px;
+}
+.card_img_two{
+    margin-top: 20px;
+    margin-bottom: 30px;    
+    background: url("../img/Frame\ \(1\).png")no-repeat;
+    width: 376px;
+height: 240px;
+    display: flex;
+   align-items: end;
+
+}
+.card_text_warpper{
+    background: white;
+    width: 301px;
+height: 112px;
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+
+}
+.card_text_infomation{
+    color: #252061;
+    font-family: Poppins;
+font-size: 18px;
+font-weight: 400;
+line-height: 23px;
+text-align: left;
+
+}
+.card_text_info{    
+    color: #929292;
+    padding-left: 10px;
+}
+.card_img_three{
+    background: url("../img/ras.png")no-repeat;    
+    background-color: #252061;
+    width: 376.01px;
+height: 229px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.card_img_three_title{
+    color: #ffff;
+    font-family: Poppins;
+font-size: 28px;
+font-weight: 400;
+line-height: 30px;
+text-align: left;
+}
+.card_img_three_text{
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 23px;
+    text-align: left;
+    color: #FFFF;    
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.card_img_three_footer{
+    font-family: Poppins;
+font-size: 14px;
+font-weight: 400;
+line-height: 23px;
+text-align: left;
+    color: #F55F39;
 }
